# crazyflie_ws

./: .gitignore  README.md  build_final_report.py  build_ppt.py  build_ppt_v3.py  build_v3_report.py  generate_report.py  obstacle_report.md  poster_prompt_v2.md  poster_prompt_v3_final.md  run_collect_data.sh  run_experiment.sh  run_multi_dt_compare.sh  run_quick_compare.sh  run_safety_monitor.sh  v3完整报告_面向无人机安全自主飞行的ODE初值问题数值解法稳定域分析与安全边界形式化验证.docx  图表分析_报告用.md  安全监视与实验框架_PPT.pptx
data/: export_csv.py  plot_trajectory.py
data/exp_euler_0.01/: exp_euler_0.01_0.db3  metadata.yaml
data/exp_euler_0.02/: exp_euler_0.02_0.db3  metadata.yaml
data/exp_heun_0.01/: exp_heun_0.01_0.db3  metadata.yaml
data/exp_heun_0.02/: exp_heun_0.02_0.db3  metadata.yaml
data/exp_implicit_0.01/: exp_implicit_0.01_0.db3  metadata.yaml
data/exp_implicit_0.02/: exp_implicit_0.02_0.db3  metadata.yaml
data/exp_rk45_0.01/: exp_rk45_0.01_0.db3  metadata.yaml
data/exp_rk45_0.02/: exp_rk45_0.02_0.db3  metadata.yaml
data/exp_rk4_0.01/: exp_rk4_0.01_0.db3  metadata.yaml
data/exp_rk4_0.02/: exp_rk4_0.02_0.db3  metadata.yaml
droneODE/: cora_drone_verification.mlx  crazyflie_dynamics.mlx  main_simulation.mlx  swarm_breathing_circle.mlx  swarm_cora.mlx  verify_ode_safety.mlx
exp_euler_0.02_with_target/: exp_euler_0.02_with_target_0.db3  metadata.yaml
monte_carlo_results/: summary.json
src/crazyflie_ode_core/: CMakeLists.txt  package.xml
src/crazyflie_ode_core/config/: obstacles.yaml
src/crazyflie_ode_core/include/crazyflie_ode_core/: interval_reachability.hpp  safety_monitor.hpp  solver_registry.hpp
src/crazyflie_ode_core/launch/: sim_launch.py
src/crazyflie_ode_core/rviz/: sim.rviz  swarm.rviz
src/crazyflie_ode_core/scripts/: counterexample_mining.py  monte_carlo_compare.py  plot_results.py  run_experiments.py  safety_boundary_analysis.py
src/crazyflie_ode_core/src/: interval_reachability.cpp  ode_engine_node.cpp  safety_monitor.cpp
src/crazyflie_ode_core/urdf/: crazyflie.urdf
